@@ -51,6 +51,9 @@ COMPILE_HOSTC = $(call COMPILE,HOSTCC)
 %.o: %.cpp
 	$(COMPILE_CXX)
 
+%.o: %.m
+	$(COMPILE_C)
+
 %.s: %.c
 	$(CC) $(CPPFLAGS) $(CFLAGS) -S -o $@ $<
 
