@@ -10,6 +10,7 @@ version <next>:
 - Alias PIX image encoder and decoder
 - Improvments to the BRender PIX image decoder
 - Improvments to the XBM decoder
+- QTKit input device
 
 
 version 2.2:
